syntax = "proto3";
package proto.app.v1;
option go_package = "github.com/nikumar1206/loco/proto/app/v1;appv1";
import "google/protobuf/timestamp.proto";

// --- deploy app ---
message DeployAppRequest {
    LocoConfig loco_config = 1;
    string container_image = 2;
    repeated EnvVar env_vars = 3;
}

message LocoConfig {
    Metadata metadata = 1;
    Resources resources = 2;
    Build build = 3;
    Routing routing = 4;
    HealthCheck health = 5;
    Env env = 6;
    Obs obs = 7;
}

// --- Sub-messages ---

message Metadata {
    string config_version = 1;
    string description = 2;
    string name = 3;
}

message Replicas {
    int32 max = 1;
    int32 min = 2;
}

message Scalers {
    int32 cpu_target = 1;
    int32 memory_target = 2;
    bool enabled = 3;
}

message Resources {
    string cpu = 1;
    string memory = 2;
    Replicas replicas = 3;
    Scalers scalers = 4;
}

message Build {
    string dockerfile_path = 1;
    string type = 2;
}

message Routing {
    int32 idle_timeout = 1;
    string path_prefix = 2;
    int32 port = 3;
    string subdomain = 4;
}

message HealthCheck {
    int32 interval = 1;
    string path = 2;
    int32 startup_grace_period = 3;
    int32 timeout = 4;
    int32 fail_threshold = 5;
}

message Env {
    string file = 1;
    repeated EnvVar variables = 2;
}

message EnvVar {
    string name = 1;
    string value = 2;
}

message Logging {
    bool enabled = 1;
    string retention_period = 2;
    bool structured = 3;
}

message Metrics {
    bool enabled = 1;
    string path = 2;
    int32 port = 3;
}

message Tracing {
    bool enabled = 1;
    double sample_rate = 2;
    map<string, string> tags = 3;
}

message Obs {
    Logging logging = 1;
    Metrics metrics = 2;
    Tracing tracing = 3;
}

message DeployAppResponse {
    string message = 1;
}

// --- logs ---

message LogsRequest {
    string app_name = 1;
    int64 tail = 2;
}

message LogsResponse {
    google.protobuf.Timestamp timestamp = 1;
    string pod_name = 2;
    string log = 3;
}

// --- status ---
 message StatusRequest {
     string app_name = 1;
}

message StatusResponse {
    string status = 1;
    int32 pods = 2;
    string cpu_usage = 3;
    string memory_usage = 4;
    string latency = 5;
    string url = 6;
    google.protobuf.Timestamp deployed_at = 7;
    string deployed_by = 8;
    string tls = 9;
    string health = 10;
    bool autoscaling = 11;
    int32 min_replicas = 12;
    int32 max_replicas = 13;
    int32 desired_replicas = 14;
    int32 ready_replicas = 15;
}



// --- destroy app ---
message DestroyAppRequest {
    string name = 1;
}

message DestroyAppResponse {
    string message = 1;
}

service AppService {
  rpc DeployApp(DeployAppRequest) returns (DeployAppResponse) {}
  rpc Logs(LogsRequest) returns (stream LogsResponse) {}
  rpc Status(StatusRequest) returns (StatusResponse) {}
  rpc DestroyApp(DestroyAppRequest) returns (DestroyAppResponse) {}
}
